print fix wordwrap

--- a/app/static/stylesheets/export.css
+++ b/app/static/stylesheets/export.css
@@ -81,8 +81,10 @@ a:link {
 
 @media print{
     #question-block  {
+        margin-top:0px;
         margin-left:0px;
         margin-right:0px;
+        word-wrap: break-word;
     }
     
     #home {
